# Esterv.Designs

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: build-test-install.yml  code-format.yml  codeFormat.yml  qmllint.yml
Controls/: CMakeLists.txt  README.md
Controls/Flat/: CMakeLists.txt
Controls/Flat/qml/: Button.qml  CheckBox.qml  ComboBox.qml  DelayButton.qml  Frame.qml  ItemDelegate.qml  Label.qml  Popup.qml  RoundButton.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolTip.qml
Controls/examples/: CMakeLists.txt  GalleryControls.cpp
Controls/examples/qml/: GalleryControls.qml
CustomControls/: CMakeLists.txt  README.md
CustomControls/aboutThis/: .gitignore  About.qml.in  CMakeLists.txt
CustomControls/aboutThis/examples/: AboutGui.cpp  CMakeLists.txt
CustomControls/aboutThis/examples/qml/: AboutGui.qml
CustomControls/aboutThis/include/esterv/utils/: about.hpp
CustomControls/aboutThis/src/: about.cpp
CustomControls/examples/: CMakeLists.txt  GalleryCustomControls.cpp
CustomControls/examples/qml/: GalleryCustomControls.qml
CustomControls/include/: about.hpp
CustomControls/qml/: About.qml  CloseButton.qml  NextButton.qml  PinPad.qml  PrevButton.qml  ThemeSwitch.qml
CustomControls/src/: about.cpp
Examples/: CMakeLists.txt  example1.cpp
MyDesigns/: CMakeLists.txt  Config.cmake.in
MyDesigns/qml/: MyButton.qml  MyTextField.qml  Node_Connections.qml  window.qml
Styles/: README.md
Styles/Simple/: CMakeLists.txt
Styles/Simple/frag/: close.frag  filledArrowHead.frag  hollowArrowHead.frag  sunTomoon.frag
Styles/Simple/qml/: Style.qml
examples/: CMakeLists.txt  aboutCli.cpp  aboutGui.cpp  example1.cpp  main.cpp  window.qml
examples/qml/: aboutGui.qml  example1.qml
frag/: arrowHead.frag  close.frag  gausianBlur.frag  mySettButton.frag  plus.frag  sunTomoon.frag  voronoi.frag
include/: mydesigns.hpp
qml/: AmountText.qml  ArrowShadder.qml  Button.qml  CloseButton.qml  CloseShadder.qml  CustomStyle.qml  GaussianBlurShadder.qml  MyAddressQr.qml  MyButton.qml  MyCheckBox.qml  MyFrame.qml  MyLabel.qml  MyPayPopUp.qml  MyPinBox.qml  MyRadioButton.qml  MySettButton.qml  MySwitch.qml  MyTextArea.qml  MyTextField.qml  NextButton.qml  Notification.qml  PayQrPop.qml  PlusButton.qml  PlusShadder.qml  PrevButton.qml  QrTextCamPop.qml  SettWheelShadder.qml  TextAddress.qml  ThemeSwitch.qml  window.qml
src/: mydesigns.cpp
